glib: refactor GStr and GString constructors
Optimizes GString to avoid unnecessary checking for interior nul bytes.
Interior nul bytes will now only be checked upon request. When
converting to C strings, the string will always get truncated to the
first nul byte. Since GString can now contain interior nul bytes in some
circumstances, its interior representation is now Option<Box<str>>.

Also adds custom error types for conversions.

--- a/glib/Cargo.toml
+++ b/glib/Cargo.toml
@@ -34,6 +34,7 @@ rs-log = { package = "log", version = "0.4", optional = true }
 smallvec = "1.0"
 thiserror = "1"
 gio_ffi = { package = "gio-sys", path = "../gio/sys", optional = true }
+memchr = "2.5.0"
 
 [dev-dependencies]
 tempfile = "3"
