--- a/glib-macros/Cargo.toml
+++ b/glib-macros/Cargo.toml
@@ -19,6 +19,7 @@ proc-macro2 = "1.0"
 quote = "1.0"
 syn = { version = "1.0", features = ["full"], default-features = false }
 proc-macro-crate = "1.0"
+parse-format = { path = "../../../src/parse-format" }
 
 [lib]
 proc-macro = true
