glib-sys: ignore some unsupported types

--- a/glib/sys/Gir.toml
+++ b/glib/sys/Gir.toml
@@ -78,9 +78,24 @@ status = "generate"
     version = "2.72"
 
 [[object]]
+name = "GLib.LOG_DOMAIN"
+# C-only macro
+status = "ignore"
+
+[[object]]
 name = "GLib.Pid"
 status = "manual"
 
 [[object]]
 name = "GLib.PollFD"
 status = "manual"
+
+[[object]]
+name = "GLib.TestLogMsg"
+# layout is broken due to rust having no long double
+status = "ignore"
+
+[[object]]
+name = "GLib.macro__has_attribute___noreturn__"
+# C-only macro
+status = "ignore"
