--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -22,10 +22,10 @@ jobs:
         conf:
           - { name: "cairo", features: "png,pdf,svg,ps,use_glib,v1_18,freetype,script,xcb,xlib,win32-surface", nightly: "--features 'png,pdf,svg,ps,use_glib,v1_18,freetype,script,xcb,xlib,win32-surface'", test_sys: true }
           - { name: "gdk-pixbuf", features: "v2_42", nightly: "--all-features", test_sys: true }
-          - { name: "gio", features: "v2_74", nightly: "--all-features", test_sys: false }
-          - { name: "glib", features: "v2_74", nightly: "--all-features", test_sys: false }
+          - { name: "gio", features: "v2_74", nightly: "--all-features", test_sys: true }
+          - { name: "glib", features: "v2_74", nightly: "--all-features", test_sys: true }
           - { name: "graphene", features: "", nightly: "", test_sys: true }
-          - { name: "pango", features: "v1_50", nightly: "--all-features", test_sys: false }
+          - { name: "pango", features: "v1_50", nightly: "--all-features", test_sys: true }
           - { name: "pangocairo", features: "", nightly: "--all-features", test_sys: true }
     steps:
       - uses: actions/checkout@v3
